--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
   text-align: center;
   padding: 30px;
   padding-top: 0;
-  background-image: url(hanuman\ ji.jpg);
-  background-position: center;
+  /* background-image: url(hanuman\ ji.jpg);
+  background-position: center; */
 }
 
 .heading {
@@ -34,4 +34,20 @@ a:hover {
   color: #830000;
   background-color: #ffca28;
   font-weight: bold;
+}
+
+.bg-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /*To Maintain aspect ratio*/
+  z-index: -1; /*To keep image behind your text*/
+  opacity: 0.9;
+}
+
+.content {
+  position: relative; /*To sit above the image*/
+  z-index: 1;
 }
