--- a/h-chalisa.css
+++ b/h-chalisa.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   background-color: #fffaf0;
-  color: #333;
+  color: #000000;
   margin: 0;
   padding: 0;
   line-height: 1.8;
@@ -15,12 +15,44 @@ body {
 }
 
 h1 {
-  font-size: 45px;
-  color: #b22222;
+  font-size: 60px;
+  color: #ff0000;
   margin-bottom: 40px;
 }
 
 .chalisa {
+  background-color: #f5f2f29a;
+  border-radius: 20px;
+  padding: 0 15px;
   text-align: left;
   font-size: 28px;
+}
+
+.bg-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /*To Maintain aspect ratio*/
+  z-index: -1; /*To keep image behind your text*/
+  opacity: 0.5;
+}
+
+.container {
+  position: relative; /*To sit above the image*/
+  z-index: 1;
+}
+
+.doha {
+  font-style: italic;
+  margin-bottom: 40px;
+}
+.doha-bold {
+  font-weight: bold;
+  font-style: none;
+}
+
+.choupai {
+  font-weight: bold;
 }
