--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  color: #830000;
+
   text-align: center;
   padding: 30px;
   padding-top: 0;
@@ -11,6 +11,13 @@ body {
 .heading {
   font-size: 60px;
   margin-bottom: 40px;
+  color: white;
+  background-color: rgb(71, 71, 71);
+  border-radius: 15px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 30px;
 }
 
 .container {
@@ -34,4 +41,20 @@ a:hover {
   color: #830000;
   background-color: #ffca28;
   font-weight: bold;
+}
+
+.bg-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /*To Maintain aspect ratio*/
+  z-index: -1; /*To keep image behind your text*/
+  opacity: 1;
+}
+
+.container {
+  position: relative; /*To sit above the image*/
+  z-index: 1;
 }
